# WeebCountryBot

./: DiscordBot.py  main.py  pyproject.toml
cogs folder/: Miscellaneous.py  WeebImages.py
